--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-plugin-emotion": "^9.2.11",
+    "emotion": "^9.2.12",
+    "emotion-theming": "^9.2.9",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-emotion": "^9.2.12",
     "react-scripts-ts": "3.1.0"
   },
   "scripts": {
@@ -18,6 +22,9 @@
     "@types/node": "^10.11.7",
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.9",
+    "@types/react-test-renderer": "^16.0.3",
+    "jest-emotion": "^9.2.11",
+    "react-test-renderer": "^16.5.2",
     "typescript": "^3.1.3"
   }
 }
