--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@types/node": "^10.11.7",
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.9",
+    "@types/react-test-renderer": "^16.0.3",
+    "jest-emotion": "^9.2.11",
+    "react-test-renderer": "^16.5.2",
     "typescript": "^3.1.3"
   }
 }
