--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "babel-plugin-emotion": "^9.2.11",
+    "color": "^3.1.0",
     "emotion": "^9.2.12",
     "emotion-theming": "^9.2.9",
     "react": "^16.5.2",
@@ -23,6 +24,7 @@
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.9",
     "@types/react-test-renderer": "^16.0.3",
+    "@types/color": "^3.0.0",
     "jest-emotion": "^9.2.11",
     "react-test-renderer": "^16.5.2",
     "typescript": "^3.1.3"
